--- a/ui/html/plugin_settings.html
+++ b/ui/html/plugin_settings.html
@@ -2,20 +2,12 @@
 <html data-bs-theme=”auto”>
 <head>
     <title>ytdlp2STRM - {{ plugin.name }} Settings</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
-    <style>
-        @media (prefers-color-scheme: dark) {
-          body {
-            color: var(--bs-secondary-bg-subtle);
-            background-color: var(--bs-dark);
-          }
-          h1 {
-            color: var(--bs-secondary-bg-subtle);
-          }
-        }
-      </style>
+    <link rel="stylesheet" href="/styles.css" crossorigin="anonymous">
+    <script src="/bs-theme-mode.js"></script>
 </head>
 <body>
     <div class="col-lg-8 mx-auto p-3 py-md-5">
@@ -43,22 +35,5 @@
             {% endif %}
         {% endif %}
     </div>
-    <script>
-        (function () {
-        const htmlElement = document.querySelector("html")
-        if(htmlElement.getAttribute("data-bs-theme") === 'auto') {
-            function updateTheme() {
-              document.querySelector("html").setAttribute(
-                "data-bs-theme",
-                window.matchMedia(
-                  "(prefers-color-scheme: dark)"
-                ).matches ? "dark" : "light"
-              )
-            }
-            window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', updateTheme)
-            updateTheme()
-        }
-        })()
-    </script>
 </body>
 </html>
