--- a/ui/html/crons.html
+++ b/ui/html/crons.html
@@ -31,6 +31,11 @@
                 </div>
             {% endif %}
         {% endif %}
+        <footer class="pt-5 my-5 text-muted border-top">
+            <a href="https://github.com/fe80Grau/ytdlp2STRM" target="_blank"><i class="bi bi-github"></i> fe80grau / ytdlp2STRM</a>
+            <a style="float:right" href="https://www.buymeacoffee.com/fe80grau" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="width: 90px !important;" ></a>
+          </footer>
     </div>
+    
 </body>
 </html>
