--- a/ui/html/plugin_py_settings.html
+++ b/ui/html/plugin_py_settings.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles.css" crossorigin="anonymous">
     <script src="/bs-theme-mode.js"></script>
+    <style>
+        .input-group {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .input-group input {
+            flex: 1;
+        }
+    </style>
 </head>
 <body>
     <div class="col-lg-8 mx-auto p-3 py-md-5">
@@ -15,8 +26,18 @@
         <form method="post">
             <div class="mb-3">
                 <label class="form-label">./config/plugins.py</label>
-                <textarea class="form-control" name="plugin_code" rows="10">{{ plugin_code }}</textarea>
+                <div id="plugin-fields">
+                    {% for field in plugin_code %}
+                        <div class="mb-3 input-group">
+                            <input class="form-control" type="text" name="plugin_field" value="{{ field }}">
+                            <button class="btn btn-danger" type="button" onclick="this.parentNode.parentNode.removeChild(this.parentNode);">
+                                <i class="bi bi-trash"></i>
+                            </button>                        
+                        </div>
+                    {% endfor %}
+                </div>
             </div>
+            <button class="btn btn-primary" type="button" id="add-field">Add plugin</button>
             <button class="btn btn-primary" type="submit">Save</button>
             <a href="/" class="btn btn-primary">Go back</a>
         </form>
@@ -36,5 +57,35 @@
             <a style="float:right" href="https://www.buymeacoffee.com/fe80grau" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="width: 90px !important;" ></a>
           </footer>
     </div>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var addFieldButton = document.getElementById('add-field');
+            var pluginFields = document.getElementById('plugin-fields');
+
+            addFieldButton.addEventListener('click', function() {
+                var newField = document.createElement('div');
+                newField.className = 'mb-3 input-group';
+
+                var newInput = document.createElement('input');
+                newInput.className = 'form-control';
+                newInput.type = 'text';
+                newInput.name = 'plugin_field';
+
+                var deleteButton = document.createElement('button');
+                deleteButton.className = 'btn btn-danger';
+                var trashIcon = document.createElement('i');
+                trashIcon.className = 'bi bi-trash';
+                deleteButton.appendChild(trashIcon);
+
+                deleteButton.addEventListener('click', function() {
+                    newField.remove();
+                });
+
+                newField.appendChild(newInput);
+                newField.appendChild(deleteButton);
+                pluginFields.appendChild(newField);
+            });
+        });
+    </script>
 </body>
 </html>
