--- a/ui/html/crons.html
+++ b/ui/html/crons.html
@@ -57,6 +57,11 @@
             <button class="btn btn-primary" type="button" id="add-field">Add CRON</button>
             <button class="btn btn-primary" type="submit">Save</button>
             <a href="/" class="btn btn-primary">Go back</a>
+            <div class="mb-3 mt-3">
+                <p>* To indicate every minute, every hour, or every day, keep the quantity blank and set the time units to singular (minute, hour, day) <a href="https://schedule.readthedocs.io/en/stable/reference.html#schedule.Job.second">schedule time units</a></p>
+                <p>* Keep blank the timezone to work with default machine timezone. List of all timezones. <a href="https://en.wikipedia.org/wiki/List_of_tz_database_time_zones">List of all timezones</a></p>
+
+            </div>
         </form>
         <footer class="pt-5 my-5 text-muted border-top">
             <a href="https://github.com/fe80Grau/ytdlp2STRM" target="_blank"><i class="bi bi-github"></i> fe80grau / ytdlp2STRM</a>
