--- a/ui/html/crons.html
+++ b/ui/html/crons.html
@@ -58,8 +58,8 @@
             <button class="btn btn-primary" type="submit">Save</button>
             <a href="/" class="btn btn-primary">Go back</a>
             <div class="mb-3 mt-3">
-                <p>* To indicate every minute, every hour, or every day, keep the quantity blank and set the time units to singular (minute, hour, day) <a href="https://schedule.readthedocs.io/en/stable/reference.html#schedule.Job.second">schedule time units</a></p>
-                <p>* Keep blank the timezone to work with default machine timezone. List of all timezones. <a href="https://en.wikipedia.org/wiki/List_of_tz_database_time_zones">List of all timezones</a></p>
+                <p>* To indicate every minute, every hour, or every day, keep the quantity blank and set the time units to singular (minute, hour, day) <a target="_blank" href="https://schedule.readthedocs.io/en/stable/reference.html#schedule.Job.second">schedule time units</a></p>
+                <p>* Keep blank the timezone to work with default machine timezone. List of all timezones. <a target="_blank" href="https://en.wikipedia.org/wiki/List_of_tz_database_time_zones">List of all timezones</a></p>
 
             </div>
         </form>
