add stderr log and ui log view

--- a/ui/html/index.html
+++ b/ui/html/index.html
@@ -24,7 +24,7 @@
             <a href="/general" class="btn btn-primary btn-lg px-4">General Settings</a>
             <a href="/plugins" class="btn btn-primary btn-lg px-4">Enable / Disable Plugins</a>
             <a href="/crons" class="btn btn-primary btn-lg px-4">Enable / Disable CRONS</a>
-
+            <a href="/log" class="btn btn-primary btn-lg px-4">Log</a>
           </div>
           <hr class="col-3 col-md-2 mb-5">
 
